// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should render correctly 1`] = `
.emotion-0 {
  border: 0;
  margin: 0;
  border-bottom: 1px solid currentColor;
  height: 0;
  width: auto;
}

<hr
  aria-orientation="horizontal"
  class="components-divider emotion-0 emotion-1"
  data-wp-c16t="true"
  data-wp-component="Divider"
  role="separator"
/>
`;

exports[`props should render margin 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -19,13 +19,13 @@
      "border-top-color": "currentcolor",
      "border-top-style": "none",
      "border-top-width": "0px",
      "border-width": "0px 0px 1px",
      "height": "0px",
-     "margin": "0px",
-     "margin-bottom": "0px",
+     "margin": "calc(28px) 0px",
+     "margin-bottom": "calc(28px)",
      "margin-left": "0px",
      "margin-right": "0px",
-     "margin-top": "0px",
+     "margin-top": "calc(28px)",
      "width": "auto",
    },
  ]
`;

exports[`props should render marginEnd 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -19,12 +19,12 @@
      "border-top-color": "currentcolor",
      "border-top-style": "none",
      "border-top-width": "0px",
      "border-width": "0px 0px 1px",
      "height": "0px",
-     "margin": "0px",
-     "margin-bottom": "0px",
+     "margin": "0px 0px calc(20px)",
+     "margin-bottom": "calc(20px)",
      "margin-left": "0px",
      "margin-right": "0px",
      "margin-top": "0px",
      "width": "auto",
    },
`;

exports[`props should render marginStart 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -19,13 +19,13 @@
      "border-top-color": "currentcolor",
      "border-top-style": "none",
      "border-top-width": "0px",
      "border-width": "0px 0px 1px",
      "height": "0px",
-     "margin": "0px",
+     "margin": "calc(20px) 0px 0px",
      "margin-bottom": "0px",
      "margin-left": "0px",
      "margin-right": "0px",
-     "margin-top": "0px",
+     "margin-top": "calc(20px)",
      "width": "auto",
    },
  ]
`;
